--- a/app/src/main/res/layout/activity_list_item_info.xml
+++ b/app/src/main/res/layout/activity_list_item_info.xml
@@ -1,176 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    tools:context="org.techtown.exper_version_2.ListItemInfo">
-    <TextView
-        android:layout_weight="1"
-        android:id="@+id/food_name"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:layout_marginBottom="15dp"/>
+    <TextView android:layout_height="50dp" android:layout_width="200dp" android:layout_marginBottom="15dp" android:textAlignment="center" android:textSize="20dp" android:layout_gravity="center" android:id="@+id/food_name" android:layout_weight="1"/>
 
-    <Button
-        android:id="@+id/btn_reg"
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="등록"/>
-
-    <LinearLayout
-        android:layout_weight="9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="칼로리"
-
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:layout_marginRight="10dp"
-            />
-
-        <ProgressBar
-
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginBottom="20dp" android:layout_gravity="right" android:id="@+id/btn_reg" android:text="등록"/>
 
 
-            android:max="100"
-            android:progress="50" />
-    </LinearLayout>
+    -<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="9">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="20dp">
 
-        <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="탄수화물"
-            android:textSize="20dp"
-            android:layout_marginRight="10dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            />
+    <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textAlignment="center" android:textSize="20dp" android:text="칼로리" android:layout_marginRight="10dp" android:gravity="center"/>
 
-        <ProgressBar
-            android:layout_weight="3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <ProgressBar android:layout_height="match_parent" android:layout_width="match_parent" android:progress="50" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+</LinearLayout>
 
 
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100"
-            android:progress="50"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="55dp"
-            android:layout_height="match_parent"
-            android:text="수분"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            />
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="20dp">
 
-        <ProgressBar
+    <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textAlignment="center" android:textSize="20dp" android:layout_weight="1" android:text="탄수화물" android:layout_marginRight="10dp" android:gravity="center"/>
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <ProgressBar android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="3" android:progress="50" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+</LinearLayout>
 
 
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100"
-            android:progress="50"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="단백질"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            />
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="20dp">
 
-        <ProgressBar
+    <TextView android:layout_height="match_parent" android:layout_width="55dp" android:textAlignment="center" android:textSize="20dp" android:text="수분" android:layout_marginRight="10dp" android:gravity="center"/>
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <ProgressBar android:layout_height="match_parent" android:layout_width="match_parent" android:progress="50" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+</LinearLayout>
 
 
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100"
-            android:progress="50"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="55dp"
-            android:layout_height="match_parent"
-            android:text="지방"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            />
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="20dp">
 
-        <ProgressBar
+    <TextView android:layout_height="match_parent" android:layout_width="wrap_content" android:textAlignment="center" android:textSize="20dp" android:text="단백질" android:layout_marginRight="10dp" android:gravity="center"/>
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <ProgressBar android:layout_height="match_parent" android:layout_width="match_parent" android:progress="50" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+</LinearLayout>
 
 
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100"
-            android:progress="50"/>
-    </LinearLayout>
-    </LinearLayout>
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="20dp">
 
-    <Button
+    <TextView android:layout_height="match_parent" android:layout_width="55dp" android:textAlignment="center" android:textSize="20dp" android:text="지방" android:layout_marginRight="10dp" android:gravity="center"/>
 
-        android:id="@+id/btn_back"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:padding="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="50dp"
-        android:text="메인 화면으로"/>
+    <ProgressBar android:layout_height="match_parent" android:layout_width="match_parent" android:progress="50" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+</LinearLayout>
+
+</LinearLayout>
+
+    <Button android:layout_height="50dp" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/btn_back" android:text="메인 화면으로" android:padding="10dp" android:layout_marginTop="20dp"/>
+
 </LinearLayout>
